# BBB-to-video-file

./: .gitignore  KONSPEKT_RELEASE.md  Konspekt.spec  LOCAL_AI_SETUP.md  PRODUCT.md  README.md  bbb_download.py  bbb_download.spec  bbb_import.py  build.ps1  build_konspekt.ps1  chatgpt_handoff.py  context_package.py  deepseek_handoff.py  lesson_output.py  local_pipeline.py  pyproject.toml  requirements-dev.txt  requirements-local-ai.txt  requirements.txt  run.bat  run_study_app.bat  setup.ps1  setup_local_ai.ps1  study_app.py
docs/: local-ai.md  release.md
packaging/: Konspekt.spec  bbb_download.spec
requirements/: base.txt  dev.txt
scripts/: build_bbb_downloader.ps1  build_konspekt.ps1  make_icon.py  run_bbb_downloader.bat  run_konspekt.bat  setup_dev.ps1  setup_local_ai.ps1
src/konspekt/: __init__.py  __main__.py  api_generation.py  app.py  bbb_download.py  bbb_import.py  chatgpt_account.py  chatgpt_auth_window.py  chatgpt_handoff.py  context_package.py  deepseek_handoff.py  diagnostics.py  lesson_output.py  local_pipeline.py  settings.py
tests/: test_api_generation.py  test_app_workers.py  test_bbb_import.py  test_chatgpt_account.py  test_chatgpt_auth_window.py  test_chatgpt_handoff.py  test_context_package.py  test_deepseek_handoff.py  test_lesson_output.py  test_local_pipeline.py  test_module_entrypoint.py  test_recording_dates.py  test_settings.py
